--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -5,7 +5,7 @@
 
   <div class="form-group">
     <label>First Name</label>
-    <%= f.text_field :first_name, placeholder: "First Name", class: "form-control" %>
+    <%= f.text_field :name, placeholder: "First Name", class: "form-control" %>
   </div>
 
   <div class="form-group">
@@ -14,8 +14,18 @@
   </div>
 
   <div class="form-group">
-    <label>Bio</label>
-    <%= f.text_area :bio, rows: 5, placeholder: "Say something about yourself", class: "form-control" %>
+    <label>City</label>
+    <%= f.text_field :city, placeholder: "City", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Country</label>
+    <%= f.text_field :country, placeholder: "Country", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Avatar</label>
+    <%= f.text_field :img_url, placeholder: "Link to image", class: "form-control" %>
   </div>
 
   <div class="actions">
