--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Forecast for today</h1>
+
+<p><%= "Todays temperature is: #{@forecast.temperature}____ C" %> </p>
