--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Forecast for today</h1>
 
-<p><%= "Todays temperature is: #{@forecast.temperature}____ C" %> </p>
+<p><%= "Todays temperature in #{current_user.profile.city} is: #{@forecast.temperature} °C" %> </p>
